=== What's new in 1.3 Since 1.2

==== Support for Transactions

The 0.11.0.0 client library added support for transactions; the `KafkaTransactionManager` and other support for transactions has been added.
See <<transactions>> for more information.

==== Support for Headers

The 0.11.0.0 client library added support for message headers; these can now be mapped to/from `spring-messaging` `MessageHeaders`.
See <<headers>> for more information.

==== Support for Kafka timestamps

`KafkaTemplate` now supports API to add records with timestamps.
New `KafkaHeaders` have been introduced regarding `timestamp` support.
Also new `KafkaConditions.timestamp()` and `KafkaMatchers.hasTimestamp()` testing utilities have been added.
See <<kafka-template>>, <<kafka-listener-annotation>> and <<testing>> for more details.

==== @KafkaListener Changes

You can now configure a `KafkaListenerErrorHandler` to handle exceptions.
See <<annotation-error-handling>> for more information.

==== @EmbeddedKafka Annotation

For convenience a test class level `@EmbeddedKafka` annotation is provided with the purpose to register `KafkaEmbedded` as a bean.
See <<testing>> for more information.

==== Kerberos Configuration

Support for configuring Kerberos is now provided.
See <<kerberos>> for more information.